--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -32,8 +32,6 @@ treatment effects.
 controlling for treatment status and three additional covariates. The additional covariates are
 chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariables}. We account for the sampling variation implied in the estimation by the (IPW) scheme when producing our bootstrap-based inference.
 
-\noindent \textbf{[JJH: Is this still valid?] [JLG: Yes. Please see Appendix~\ref{appendix:bvariables}. It contains the discussion on how we select control variables when estimating the IPW and when controlling for background variables when estimating treatment effects. The discussion on background variables to produce the predictions is separate.]}\\
-
 \subsection{Incomplete Data}
 \label{app:method_noobs}
 
@@ -67,7 +65,7 @@ chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariable
 
 \noindent \textbf{The Children of the National Longitudinal Survey of Youth (CNLSY)} is a survey of the children of the mothers from the NLSY, beginning in 1986. At the time of the initial interview, the ages of the children surveyed ranged from 0 to 23. As of 2010, the CNLSY sample includes 11,504 children born to NLSY79 mothers. With appropriate weights, the CNLSY may be considered nationally representative of children born to women who were aged 14 to 22 during 1979. Interviews were conducted annually between 1986 and 1994, and biennially thereafter. \\
 
-\noindent Similar to the NLSY, the CNLSY collected data on cognitive ability, motor and social development, home environment, health information, education, attitudes, employment, income, family decisions, and more. We use these data to estimate a prediction model for subject income for ages 22 through 29. \\
+\noindent Sf to the NLSY, the CNLSY collected data on cognitive ability, motor and social development, home environment, health information, education, attitudes, employment, income, family decisions, and more. We use these data to estimate a prediction model for subject income for ages 22 through 29. \\
 
 \noindent As we did with the NLSY, we restrict the CNLSY sample to individuals with labor income less than \$300,000 (2014 USD) at any given year. In addition to this, we limit the sample to subjects born between 1978 and 1983. Because the CNLSY data extends to 2012, this implies that we use the most recent data from the CNLSY in which individuals are aged 29 to 34. Finally, given the biennial nature of the survey, we perform a linear interpolation on the variables that enter into our prediction model. This allows us to use as much of the CNLSY data as possible at every age when interpolating subject income. \\
 
@@ -77,11 +75,11 @@ chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariable
 
 \subsubsection{Variables Used to Predict}
 
-\noindent We base our predictions on three types of variables. We call $X,W,Z$ prediction variables. Variables that could have not been affected by treatment, or pre-treatment variables. We divide these into two categories, pre-treatment variables used in the randomization protocol of ABC/CARE and pre-treatment variables not used in this protocol. We denote this by $Z$ and $W$, respectively. We let $X$ denote  the variables that could have been affected by treatment.\\
+\noindent We base our predictions on three types of variables. We call $X,W,Z$ the prediction variables. Variables that could not have been affected by treatment, or pre-treatment variables, are divided into two categories: pre-treatment variables used in the randomization protocol of ABC/CARE, and pre-treatment variables not used in this protocol. We denote these by $Z$ and $W$, respectively. For the remainder of this section, we combine the two pre-treatment variables into a common vector of background variables and denote it $\mathcal{B}$. Lastly, we let $X$ denote the variables that could have been affected by treatment.\\
 
-\noindent At each age, our prediction is a function of the prediction variables.\footnote{As we explain in the main paper, it is also possible to let our prediction in $t$ depend on our prediction in $t-1$. Suppose we want to predict $Y_{t}$. We can base our prediction not only on $X,W,Z$ but also on our prediction of $Y_{t-1}$.} Our prediction is based on identifying and estimating a relationship between the outcome we want to predict at time $t$, $Y_{t}$, in the non-experimental samples and then using this relationship in the experimental sample.\\
+\noindent At each age, our prediction is a function of the prediction variables.\footnote{As we explain in the main paper, it is also possible to let our prediction in $t$ depend on our prediction in $t-1$. Suppose we want to predict $Y_{t}$. We can base our prediction not only on $X,\mathcal{B}$ but also on our prediction of $Y_{t-1}$.} Our prediction is based on identifying and estimating a relationship between the outcome we want to predict at time $t$, $Y_{t}$, in the non-experimental samples and then using this relationship in the experimental sample.\\
 
-\noindent To be considered a prediction variable, the variable must satisfy three restrictions: (i) it has to be available in the experimental and non-experimental samples; (ii) it has to have predictive power on the predicted outcome; (iii) a containing support assumption between the experimental and non-experimental datasets needs to be satisfied, as we formalize in Section~\ref{section:methodology}.\\
+\noindent To be considered a prediction variable, the variable must satisfy three restrictions: (i) it has to be available in the experimental and non-experimental samples; (ii) it has to have predictive power on the predicted outcome; (iii) a containing support assumption between the experimental and non-experimental datasets, whereby, the support of the non-experimental samples contain the support of the experimental sample, as we formalize in  Section~\ref{section:methodology},  Assumption~\ref{ass:contain}.\\
 
 \noindent For a variable to satisfy restrictions (i) and (ii), it needs to be the case not only that the variable is available in the non-experimental sample but also that the survey question leading to it was introduced far enough back in time for us to observe it in a range that is common to the range in which we observe the variables in the experimental sample. To illustrate this, consider the case of body-mass index in the PSID. Survey questions leading to its availability were introduced in the late 1990s. The sample for whom the question was introduced, however, does not span enough observations for its support to cover the support of the experimental sample.\\
 
@@ -151,7 +149,7 @@ chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariable
 
 \subsubsection{Predictive Power}
 
-\noindent We present evidence on the second restriction next. Tables~\ref{table:predpsid} to \ref{table:predcnlsy} show that, in each of the auxiliary samples that we use, the prediction variables $X,W,Z$ are strong predictors of labor income at age 30. We present this evidence at age 30 both for brevity and to compare the predictive power of $X,W,Z$ on the outcomes we consider in the ABC/CARE sample.
+\noindent We present evidence on the second restriction next. Tables~\ref{table:predpsid} to \ref{table:predcnlsy} show that, in each of the auxiliary samples that we use, the prediction variables $X, \mathcal{B}$ are strong predictors of labor income at age 30. We present this evidence at age 30 both for brevity and to compare the predictive power of $X,\mathcal{B}$ on the outcomes we consider in the ABC/CARE sample.
 
 \begin{table}[H] 
 \begin{threeparttable}
@@ -261,13 +259,13 @@ chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariable
 
 \subsubsection{Sensitivity Analysis}
 
-\noindent An immediate route of inquiry is the sensitivity of our predictions to the use of different prediction variables. We reproduce three exercises to analyze this for labor income: (i) our baseline prediction, which is based on $X,W,Z$ and the lagged value of the predicted labor income, i.e. at time $t$ we base the prediction on $X,W,Z$ and (predicted) labor income at $t-1$; (ii) the same as (i) but without using lagged labor income; (iii) the same as (i) but without using $X$; (iv) a prediction based exclusively on $W,Z$; (v) a prediction based exclusively on $X$.\\
+\noindent An immediate route of inquiry is the sensitivity of our predictions to the use of different prediction variables. We reproduce three exercises to analyze this for labor income: (i) our baseline prediction, which is based on $X, \mathcal{B}$ and the lagged value of the predicted labor income, i.e. at time $t$ we base the prediction on $X, \mathcal{B}$ and (predicted) labor income at $t-1$; (ii) the same as (i) but without using lagged labor income; (iii) the same as (i) but without using $X$; (iv) a prediction based exclusively on $\mathcal{B}$; (v) a prediction based exclusively on $X$.\\
 
 \noindent Although the prediction in (i) is the most accurate if compared to low-skilled individuals in the PSID, they are robust to sensitivity analysis.\footnote{We obtain similar results exercises for transfer income and parental labor income and they are available under request.}
 
 \begin{sidewaysfigure}[!htbp]
 \centering
-\caption{Labor Income Profiles, Prediction Based on Lagged Labor Income and $X,W,Z$}\label{fig:labor-income-profiles}
+\caption{Labor Income Profiles, Prediction Based on Lagged Labor Income and $X,\mathcal{B}$}\label{fig:labor-income-profiles}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
 		\caption{Predicted for ABC/CARE Males} \label{fig:abcare1}
@@ -294,7 +292,7 @@ Note: Panels (a) and (c) display the predicted labor income profiles for ABC/CAR
 
 \begin{sidewaysfigure}[!htbp]
 \centering
-\caption{Labor Income Profiles, Prediction Based on $X,W,Z$}\label{fig:labor-income-profiles}
+\caption{Labor Income Profiles, Prediction Based on $X,\mathcal{B}$}\label{fig:labor-income-profiles}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
 		\caption{Predicted for ABC/CARE Males} \label{fig:abcare1}
@@ -321,7 +319,7 @@ Note: Panels (a) and (c) display the predicted labor income profiles for ABC/CAR
 
 \begin{sidewaysfigure}[!htbp]
 \centering
-\caption{Labor Income Profiles, Prediction Based on Lagged Labor Income and $W,Z$}\label{fig:labor-income-profiles}
+\caption{Labor Income Profiles, Prediction Based on Lagged Labor Income and $\mathcal{B}$}\label{fig:labor-income-profiles}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
 		\caption{Predicted for ABC/CARE Males} \label{fig:abcare1}
@@ -375,7 +373,7 @@ Note: Panels (a) and (c) display the predicted labor income profiles for ABC/CAR
 
 \begin{sidewaysfigure}[!htbp]
 \centering
-\caption{Labor Income Profiles, Prediction Based on $W,Z$}\label{fig:labor-income-profiles}
+\caption{Labor Income Profiles, Prediction Based on $\mathcal{B}$}\label{fig:labor-income-profiles}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
 		\caption{Predicted for ABC/CARE Males} \label{fig:abcare1}
