--- a/output/abccare_endog_p_inc21y_smale_ready.tex
+++ b/output/abccare_endog_p_inc21y_smale_ready.tex
@@ -2,18 +2,16 @@
 \begin{tabular}{lcccccccccccc} \toprule
  & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
  & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
-$R$ &  5502.352 &     0.135 &  5469.656 &     0.150 &  4056.081 &     0.280 &  5203.703 &     0.205 &  3271.972 &     0.365 &  5574.048 &     0.255 \\  
-Mother's Education &   722.072 &     0.260 &   113.924 &     0.470 &  -196.049 &     0.545 &   299.293 &     0.400 &    25.077 &     0.500 &  2303.948 &     0.160 \\  
-PIAT (5-7) &         &         &         &         &   517.466 &     0.040 &  -302.384 &     0.710 &   626.869 &     0.050 &  -619.031 &     0.795 \\  
-Education (30) &         &         &         &         &   246.290 &     0.450 &   562.972 &     0.330 &  -973.790 &     0.620 & -4388.373 &     0.925 \\  
-Labor Income (21) &         &         &         &         &     0.069 &     0.465 &     0.254 &     0.320 &     0.200 &     0.370 &     0.503 &     0.125 \\  
-BMI (34) &         &         &         &         &         &         &         &         &     2.519 &     0.495 &   120.432 &     0.360 \\  
-Cognitive &         &         &  6607.175 &     0.000 &         &         &  6038.316 &     0.100 &         &         &  7246.854 &     0.100 \\  
-Non-cognitive &         &         &  6623.318 &     0.020 &         &         &  8918.265 &     0.035 &         &         & 14663.556 &     0.005 \\  
-Constant & 15462.470 &     0.100 & 21235.035 &     0.065 & -2.87e+04 &     0.815 & 39177.195 &     0.270 & -2.83e+04 &     0.765 &  1.00e+05 &     0.100 \\  \midrule
-$F$-stat &     2.077 &         &     5.290 &         &     3.000 &         &     6.206 &         &     3.655 &         &    35.656 &         \\  
-$R^2$ &     0.077 &         &     0.391 &         &     0.225 &         &     0.487 &         &     0.295 &         &     0.739 &         \\  
-Observations &    40 &         &    33 &         &    35 &         &    32 &         &    27 &         &    24 &         \\  
+$R$ & 13127.756 &     0.010 & 11962.075 &     0.060 & 10021.009 &     0.095 &  9602.484 &     0.180 & 13462.431 &     0.235 & -28000 &     0.530 \\  
+Mother's Education &  -187.720 &     0.545 & -1574.216 &     0.760 &  -363.856 &     0.565 & -2034.141 &     0.690 &  2408.056 &     0.295 & 21124.332 &     0.225 \\  
+PIAT (5-7) &         &         &         &         &  -359.365 &     0.745 &   804.192 &     0.255 &   326.186 &     0.420 &  2999.628 &     0.185 \\  
+Education (30) &         &         &         &         &  -489.183 &     0.600 &   759.850 &     0.380 &  1089.530 &     0.435 & 13331.783 &     0.230 \\  
+Labor Income (21) &         &         &         &         &    -0.074 &     0.565 &    -0.040 &     0.550 &    -0.944 &     0.785 &    -4.042 &     0.845 \\  
+BMI (34) &         &         &         &         &         &         &         &         &  -777.301 &     0.760 &   565.716 &     0.425 \\  
+Cognitive &         &         & -1394.586 &     0.625 &         &         & -10800 &     0.860 &         &         & 41354.977 &     0.380 \\  
+Non-cognitive &         &         & -1582.930 &     0.650 &         &         &   508.814 &     0.440 &         &         & -2.02e+04 &     0.750 \\  
+Constant & 23386.021 &     0.080 & 36548.277 &     0.110 & 65366.129 &     0.070 & -44900 &     0.660 & -20700 &     0.515 & -6.01e+05 &     0.795 \\ \midrule 
+$F$-stat &     3.809 &         &     3.840 &         &     7.427 &         & 12020.329 &         &  561000 &         &  6477.625 &         \\  
+$R^2$ &     0.181 &         &     0.294 &         &     0.360 &         &     0.580 &         &     0.757 &         &     0.987 &         \\  
+Observations &    34.370 &         &    25.610 &         &    24.200 &         &    21.300 &         &    14.660 &         &    12.580 &         \\  
 \bottomrule \end{tabular}
-
-
